--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,35 +11,35 @@
 # -----------------
 en: &DEFAULT_EN
   header:
-    title: Welcome to our Studio!
-    text: It's Nice To Meet You
-    button: Tell Me More
+    title: Digital Education and Safety Foundation
+    text: Empowering the underserved with a modern STEM/STEAM education
+    button: Learn More
     buttonlink: "#services"
 
   services:
     title: "Services"
-    text: "Lorem ipsum"
+    text: ""
     section: services
     list:
-      - title: "E-Commerce"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
-        icon: fas fa-shopping-cart #find more at https://fontawesome.com/icons
-      - title: "Responsive Design"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
-        icon: fas fa-laptop
-      - title: "[Markdown](https://en.wikipedia.org/wiki/Markdown)"
-        desc: "Your description here, full **Markdown** support"
-        icon: fab fa-markdown
-
+      - title: "Entrepreneurship"
+        desc: "Build products using entrepreneurship principals. Gather requirements, develop, and market to the community."
+        icon: fas fa-laptop        
+      - title: "Engineering"
+        desc: "Collaborate with trained hobbyists on robotics, microcontrollers, 3d printing, and other projects."
+        icon: fas fa-cogs #find more at https://fontawesome.com/icons
+      - title: "Digital Safety"
+        desc: "Over a decade of experienced technology advocates affluent in safe online activites."
+        icon: fas fa-user-shield
+ 
   portfolio:
-    title: "Portfolio"
-    text: "Lorem ipsum dolor sit amet consectetur."
+    title: "Programs"
+    text: ""
     section: portfolio
     closebutton: "Close Project"
 
   timeline:
-    title: "Timeline"
-    text: "Lorem ipsum timeline"
+    title: "Roadmap"
+    text: "A brief history of the foundation"
     section: timeline
     # left is the default
     #start_align: "left"
@@ -93,41 +93,37 @@ en: &DEFAULT_EN
         logo: assets/img/clients/creative-market.jpg
 
   team:
-    title: "OUR AMAZING TEAM"
-    text: "Lorem ipsum dolor sit amet consectetur."
-    subtext: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported.
+    title: "Team"
+    text: "Current board members"
+    subtext: We share a common interest in technology and a passion for volunteering in their community. From a young age, we've enjoyed tinkering with computers, building robots, and experimenting with new gadgets. As we've grown older, we've realized the power of technology in making a positive impact on the world. We are constantly in search of innovative ways to use our skills and knowledge to help others, and we've decided to volunteer our time and expertise to a non-profit organization.
     section: team
     people:
-      - name: "Kay Garland"
-        role: "Lead Designer"
+      - name: "Brett"
+        role: "Director"
+        image: assets/img/team/1.jpg
+        social:
+          - url: https://twitter.com/brettfxio
+            icon: fab fa-twitter
+          - url: mailto:brett@functions.io
+            icon: fas fa-envelope
+      - name: "Tim"
+        role: "Director"
         image: assets/img/team/500x500.jpg
         social:
-          - url: https://twitter.com
-            icon: fab fa-twitter
-          - url: https://facebook.com
-            icon: fab fa-facebook-f
-          - url: https://linkedin.com
-            icon: fab fa-linkedin-in
-      - name: "Larry Parker"
-        role: "Lead Marketer"
-        image: assets/img/team/2.jpg
-        social:
-          - url: https://twitter.com
-            icon: fab fa-twitter
-          - url: https://facebook.com
-            icon: fab fa-facebook-f
-          - url: https://linkedin.com
-            icon: fab fa-linkedin-in
-      - name: "Diana Perterson"
-        role: "Lead Developer"
+          - url: mailto:tim@digitaleducationsafety.org
+            icon: fas fa-envelope
+      - name: "Bryan"
+        role: "Director"
         image: assets/img/team/500x500.jpg
         social:
-          - url: https://twitter.com
-            icon: fab fa-twitter
-          - url: https://facebook.com
-            icon: fab fa-facebook-f
-          - url: https://linkedin.com
-            icon: fab fa-linkedin-in
+          - url: mailto:bryan@digitaleducationsafety.org
+            icon: fas fa-envelope
+
+  donations:
+    title: "DONATIONS"
+    text: "Why won't you work"
+    subtext: Why won't you work
+    section: donations
 
   contact:
     title: "Contact Us"
@@ -147,16 +143,12 @@ en: &DEFAULT_EN
   footer:
     legal: "Privacy Policy"
     social:
-      - url: https://twitter.com
+      - url: https://twitter.com/digitaledsafety
         icon: "fab fa-twitter"
-      - url: https://facebook.com
+      - url: https://facebook.com/digitaledusafety
         icon: "fab fa-facebook-f"
-      - url: https://linkedin.com
-        icon: "fab fa-linkedin-in"
-      - url: https://github.com/raviriley/agency-jekyll-theme
+      - url: https://github.com/digitaleducationsafety
         icon: "fab fa-github"
-      - url: https://instagram.com
-        icon: "fab fa-instagram"
 en-US:
   <<: *DEFAULT_EN
 en-CA:
