--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,7 +11,7 @@
 # -----------------
 en: &DEFAULT_EN
   header:
-    title: Digital Education & Safety Foundation
+    title: "Our Mission:"
     text: Empowering the underserved with a modern STEM/STEAM education
     button: Learn More
     buttonlink: "#services"
@@ -39,34 +39,40 @@ en: &DEFAULT_EN
 
   timeline:
     title: "Roadmap"
-    text: "A brief history of the foundation"
+    text: "How we got here"
     section: timeline
     # left is the default
     #start_align: "left"
     events:
-      - title: "Our Humble Beginnings"
-        year: "2021-2022"
+      - title: "Where it started"
+        year: "2022"
         desc: "Brainstorm and inception"
         image: assets/img/timeline/1.jpg
         alt:
-      - title: "A Charity is Born"
+      - title: "An idea is born"
         year: "September 2022"
         desc: "Incorporated, 501c3 etc"
         image: assets/img/timeline/2.jpg
         alt:
-      - title: "Website live"
-        year: "2019"
-        desc: "Ravi Riley converted Agency, a Bootstrap-based theme, into a Jekyll theme. The Jekyll theme can be installed as a Ruby gem, or remotely. For more information, visit the documentation."
-        image: assets/img/timeline/3.jpg
-        alt: image alt text
-      - title: "Scratch/NFTs"
-        year: "2009-2011"
+      - title: "Fundraising begins"
+        year: "2022-2023"
         desc: "Your description here, **Markdown** is fully supported."
         image: assets/img/timeline/4.jpg
         alt:
+      - title: "Website live"
+        year: "2023"
+        desc: "Ravi Riley converted Agency, a Bootstrap-based theme, into a Jekyll theme. The Jekyll theme can be installed as a Ruby gem, or remotely. For more information, visit the documentation."
+        image: assets/img/timeline/3.jpg
+        alt: image alt text    
         # you can enforce the alignment
-        align: right
-    end: "Be Part <br> of Our <br> Story!"
+        align: right            
+      - title: "Where we're headed"
+        year: "2024+"
+        desc: "Keeping current with the latest trends and developments in technology is crucial to stay connected. With new technologies emerging at an unprecedented pace, it is more important than ever to stay informed and adapt quickly. Whether it's staying up-to-date with the latest software and hardware, learning new programming languages, or understanding the latest breakthroughs in AI and machine learning, staying current with technology is essential for success in today's rapidly changing world."
+        image: assets/img/timeline/5.jpg
+        alt: image alt text    
+        # you can enforce the alignment         
+    end: "Join us <br>on our <br> journey!"
 
   about:
     title: "About Us"
