--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,10 @@ markdown: kramdown
 
 # Uncomment following line to use Formspree form ID based URL instead of email based URL
 # Details: https://help.formspree.io/hc/en-us/articles/360017735154-How-to-prevent-spam
-# formspree_form_path: "f/a_form_id"
+formspree_form_path: "f/mnqyzadl"
 
 plugins:
   - jekyll-remote-theme
+
+
+ein: "88-3764028"
