--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ formspree_form_path: "f/mnqyzadl"
 plugins:
   - jekyll-remote-theme
   - jekyll-seo-tag
+  - jekyll-feed
 
 
 ein: "88-3764028"
@@ -82,6 +83,8 @@ defaults:
       layout: "definition"
       image: /assets/img/glossaries/mast.jpg
 
+feed:
+  tags: true
 
 twitter:
   username: digitaledsafety
