--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ collections:
   definitions:
     output: true
     path: /definitions/:path/
-    date: 2025-02-18 12:21:22
+    date: 2025-02-17
   opensource:
     output: true
     path: /open-source/:path/
