--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ locale: "en-US" # See available languages in _data/sitetext.yml
 analytics:
   google: G-KEP2448L3X #Google Analytics tracking code here
 
+ads:
+  google: AW-16943605271 #Google Ads code here
+
 collections:
   programs:
     output: true
